# business-management-system

./: .dockerignore  .env.db.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sql_app.db  test_app.db
alembic/: env.py
alembic/versions/: 03bde57f81a0_add_comment_model.py  207c66ce67c7_add_user_model.py  26022fcfa042_add_evaluation_model.py  73d06092c341_add_meeting_model.py  9f4f3d2b8a11_add_done_task_assignee_check.py  c46346d85dfc_init_db.py  dcc43a32e193_add_team_model_and_link_to_user.py  f32d38bd10a8_add_task_model.py
src/: database.py  main.py
src/admin/: views.py
src/api/: dependencies.py  evaluations.py  meetings.py  tasks.py  teams.py
src/auth/: auth.py  manager.py
src/core/: config.py
src/models/: comment.py  evaluation.py  meeting.py  task.py  team.py  user.py
src/pages/: router.py
src/schemas/: comment.py  evaluation.py  meeting.py  task.py  team.py  user.py
src/services/: common.py  evaluations.py  meetings.py  tasks.py  teams.py
src/templates/: index.html
tests/: conftest.py  test_api.py
