[tool.poetry]
name = "effectivemobile-finproj"
version = "0.1.0"
description = "MVP Business Management System"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.115.0,<0.116.0"
uvicorn = ">=0.32.0,<0.33.0"
sqlalchemy = ">=2.0.35,<3.0.0"
alembic = ">=1.13.3,<2.0.0"
pydantic-settings = ">=2.5.2,<3.0.0"
fastapi-users = ">=13.0.0,<14.0.0"
fastapi-users-db-sqlalchemy = ">=7.0.0,<8.0.0"
aiosqlite = ">=0.20.0,<0.21.0"
jinja2 = ">=3.1.4,<4.0.0"
sqladmin = ">=0.20.0,<0.21.0"
asyncpg = ">=0.30.0,<0.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"